crates/nash-can/src/snapshots/nash_can__types__tests__annotation_function.snap
---
source: crates/nash-can/src/types.rs
description: "'a -> 'b -> 'a"
---
Annotation {
    context: [],
    free_vars: [
        "a",
        "b",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Lambda {
                    from: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    to: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 15,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                },
            },
        },
    },
}
