crates/nash-can/src/snapshots/nash_can__types__tests__annotation_mixed.snap
---
source: crates/nash-can/src/types.rs
description: "'a -> List 'a"
---
Annotation {
    context: [],
    free_vars: [
        "a",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "List",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 14,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            },
        },
    },
}
