crates/nash-can/src/snapshots/nash_can__types__tests__anonymous_record_type_errors.snap
---
source: crates/nash-can/src/types.rs
description: "{ z : Int, a : Int }"
info: diagnostic
---
nash::names::record_type_outside_alias

  × This record type needs a name:
   ╭─[src/Main.nash:1:1]
 1 │ { z : Int, a : Int }
   · ────────────────────
   ╰────
  help: A record type is only allowed as the direct body of a type alias. Give this
        record a named alias.
