crates/nash-can/src/snapshots/nash_can__types__tests__bad_args_reported_before_arity.snap
---
source: crates/nash-can/src/types.rs
description: Maybe Bogus Other
info: diagnostic
---
nash::names::not_found_type

  × Unknown type `Bogus`.
   ╭─[src/Main.nash:1:7]
 1 │ Maybe Bogus Other
   ·       ─────
   ╰────
  help: Try Maybe instead.

nash::names::not_found_type

  × Unknown type `Other`.
   ╭─[src/Main.nash:1:13]
 1 │ Maybe Bogus Other
   ·             ─────
   ╰────
  help: Try Maybe instead.
