crates/nash-can/src/snapshots/nash_can__types__tests__partial_alias_keeps_formal_parameters_bound.snap
---
source: crates/nash-can/src/types.rs
---
(
    Located {
        region: Region {
            start: Position {
                line: 0,
                column: 0,
            },
            end: Position {
                line: 0,
                column: 0,
            },
        },
        value: Alias {
            reference: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Original",
                },
                name: "Arrow",
            },
            arguments: [
                AliasArgument {
                    name: "left",
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Var(
                            "right",
                        ),
                    },
                },
            ],
            remaining: [
                "right",
            ],
            target: Open(
                Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Lambda {
                        from: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "left",
                            ),
                        },
                        to: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "right",
                            ),
                        },
                    },
                },
            ),
        },
    },
    Located {
        region: Region {
            start: Position {
                line: 0,
                column: 0,
            },
            end: Position {
                line: 0,
                column: 0,
            },
        },
        value: Alias {
            reference: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Original",
                },
                name: "Arrow",
            },
            arguments: [
                AliasArgument {
                    name: "left",
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Var(
                            "right",
                        ),
                    },
                },
                AliasArgument {
                    name: "right",
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 0,
                            },
                        },
                        value: Named {
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: Some(
                                        PackageName {
                                            author: "nash",
                                            project: "core",
                                            version: "",
                                            source: Compiler,
                                            compilation: None,
                                        },
                                    ),
                                    name: "Builtin",
                                },
                                name: "unit",
                            },
                            args: [],
                        },
                    },
                },
            ],
            remaining: [],
            target: Open(
                Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Lambda {
                        from: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "left",
                            ),
                        },
                        to: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "right",
                            ),
                        },
                    },
                },
            ),
        },
    },
    Located {
        region: Region {
            start: Position {
                line: 0,
                column: 0,
            },
            end: Position {
                line: 0,
                column: 0,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Var(
                    "right",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "unit",
                    },
                    args: [],
                },
            },
        },
    },
)
