crates/nash-can/src/snapshots/nash_can__types__tests__type_alias_expansion.snap
---
source: crates/nash-can/src/types.rs
description: "Maybe 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Alias {
        reference: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Maybe",
            },
            name: "Maybe",
        },
        arguments: [
            AliasArgument {
                name: "a",
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            },
        ],
        target: Open(
            Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ),
    },
}
