crates/nash-can/src/snapshots/nash_can__types__tests__type_union_reference.snap
---
source: crates/nash-can/src/types.rs
description: "List 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Named {
        reference: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "base",
                    },
                ),
                name: "Primitive",
            },
            name: "List",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
    },
}
