crates/nash-can/src/snapshots/nash_can__types__tests__type_var_app_unsupported.snap
---
source: crates/nash-can/src/types.rs
description: "'f 'a"
---
[
    Unsupported {
        feature: "higher-kinded type application",
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 3,
            },
        },
    },
]
